force-app/main/default/objects/ssot__CareProgram__dlm/fields/ssot__ActiveSiteCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActiveSiteCount__c</fullName>
    <label>Active Site Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActiveSiteCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>