force-app/main/default/objects/ssot__CareProgram__dlm/fields/ssot__AnnounceDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__AnnounceDate__c</fullName>
    <label>Announce Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AnnounceDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>