force-app/main/default/objects/ssot__CareProgram__dlm/fields/ssot__EnrollmentRate__c.field-meta.xml
<CustomField>
    <fullName>ssot__EnrollmentRate__c</fullName>
    <label>Enrollment Rate</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EnrollmentRate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>