force-app/main/default/objects/ssot__CareProgram__dlm/fields/ssot__FirstSiteActivatedDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__FirstSiteActivatedDate__c</fullName>
    <label>First Site Activated Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FirstSiteActivatedDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>