force-app/main/default/objects/ssot__CareProgram__dlm/fields/ssot__FirstSiteClosedOutDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__FirstSiteClosedOutDate__c</fullName>
    <label>First Site Closed Out Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FirstSiteClosedOutDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>