force-app/main/default/objects/ssot__CareProgram__dlm/fields/ssot__LastSiteActivatedDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__LastSiteActivatedDate__c</fullName>
    <label>Last Site Activated Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LastSiteActivatedDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>