force-app/main/default/objects/ssot__CareProgram__dlm/fields/ssot__LastSiteClosedOutDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__LastSiteClosedOutDate__c</fullName>
    <label>Last Site Closed Out Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LastSiteClosedOutDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>