force-app/main/default/objects/ssot__CareProgram__dlm/fields/ssot__ModificationEndDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ModificationEndDate__c</fullName>
    <label>Modification End Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ModificationEndDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>