force-app/main/default/objects/ssot__CareProgram__dlm/fields/ssot__PreCycleStartDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__PreCycleStartDate__c</fullName>
    <label>Pre Cycle Start Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PreCycleStartDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>