force-app/main/default/objects/ssot__CareProgram__dlm/fields/ssot__rel_1742275295586_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1742275295586_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CareProgram_EnrollmentDurationUomId__rel</label>
    <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
    <relationshipLabel>CareProgram_EnrollmentDurationUomId__rel</relationshipLabel>
    <relationshipName>rel_1742275295586_end</relationshipName>
    <type>Lookup</type>
</CustomField>