force-app/main/default/objects/ssot__CareProgram__dlm/fields/ssot__TargetEnrollmentDurationNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__TargetEnrollmentDurationNumber__c</fullName>
    <label>Target Enrollment Duration</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TargetEnrollmentDurationNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>